# risicompare

./: .gitignore  LICENSE  README.md  README.org  Risicompare.pyproject  form.py  form.ui  gui-implementation.org  risicompare.py  setup.cfg
risicompare/: form.py  html_delegate.py  risicompare.py
risicompare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
