[metadata]
name = risicompare
version = 1.1.3
author = Vichelis
author_email = vichelis@prefecturedelapaz.com
description = A script to get a risitas without offtopic messages, messages sorted in right order...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vichelisdelapaz/risicompare
project_urls =
    Bug Tracker = https://github.com/vichelisdelapaz/risicompare/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop

[options]
packages = risicompare
python_requires = >=3.6
install_requires =
	BeautifulSoup4
	lxml
	PyQt5

[options.entry_points]
console_scripts =
    risicompare = risicompare.risicompare:main
